fixtures/frontend/milestone-2/valid/pipe-transform-memos/main.aivi
value memoed =
    20
     |> #before before + 1 #after
     |> after + before
