fixtures/frontend/milestone-2/invalid/unfinished-recurrence/main.aivi
value broken =
    0
     @|> 1
